--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="search">Search</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-
-
+    <string name="baseUrlImage">http://image.tmdb.org/t/p/w500%s</string>
+    <string name="shareTitle">Bagikan ke…</string>
+    <string name="shareText">Sudah melihat film ini di Movies App?</string>
+    <string name="title_favorite">Favorite</string>
 </resources>
